--- a/src/main/resources/fx/css/base-styling.css
+++ b/src/main/resources/fx/css/base-styling.css
@@ -48,3 +48,13 @@
 .task-by-user-statistics-total-spent-time {
     -fx-font-weight: bold;
 }
+
+.tree-table-row-cell:odd {
+    -fx-background-color: -fx-table-cell-border-color, derive(-fx-control-inner-background, -5%);
+    -fx-background-insets: 0, 0 0 1 0;
+}
+
+.tree-table-row-cell:selected:odd {
+    -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-focus-color;
+    -fx-background-insets: 0, 1, 2;
+}
