--- a/src/main/resources/fx/views/settings.fxml
+++ b/src/main/resources/fx/views/settings.fxml
@@ -58,7 +58,7 @@
                             <GridPane.margin><Insets bottom="2.0" top="2.0" /></GridPane.margin>
                         </TextField>
 
-                        <Label fx:id="youtrackPermanentTokenLabel" text="%view.settings.youtrackpermanenttoken" GridPane.rowIndex="9" />
+                        <Label text="%view.settings.youtrackpermanenttoken" GridPane.rowIndex="9"/>
                         <PasswordField fx:id="youtrackPermanentTokenField" GridPane.columnIndex="1" GridPane.rowIndex="9">
                             <GridPane.margin><Insets bottom="2.0" top="2.0" /></GridPane.margin>
                         </PasswordField>
@@ -69,129 +69,122 @@
             <panes>
                 <fx:reference source="authenticationPane" />
                 <TitledPane expanded="false" text="%view.settings.general">
-                    <content>
-                        <GridPane hgap="5.0" BorderPane.alignment="TOP_LEFT">
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
-                                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                            </rowConstraints>
-                            <children>
-                                <Label text="%view.settings.theme"/>
-                                <ComboBox fx:id="themeComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"/>
+                    <GridPane hgap="5.0" BorderPane.alignment="TOP_LEFT">
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0"/>
+                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                        </rowConstraints>
 
-                                <Label text="%view.settings.workhours" GridPane.rowIndex="1"/>
-                                <ComboBox fx:id="workhoursComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        </padding>
+                        <Label text="%view.settings.theme"/>
+                        <ComboBox fx:id="themeComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"/>
 
-                                <Label text="%view.settings.showall" GridPane.rowIndex="2"/>
-                                <CheckBox fx:id="showAllWorklogsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <Label text="%view.settings.workhours" GridPane.rowIndex="1"/>
+                        <ComboBox fx:id="workhoursComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                                <Label text="%view.settings.showStatistics" GridPane.rowIndex="3"/>
-                                <CheckBox fx:id="showStatisticsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                        <Label text="%view.settings.showall" GridPane.rowIndex="2"/>
+                        <CheckBox fx:id="showAllWorklogsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.autoload" GridPane.rowIndex="4"/>
-                                <CheckBox fx:id="loadDataAtStartupCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                        <Label text="%view.settings.showStatistics" GridPane.rowIndex="3"/>
+                        <CheckBox fx:id="showStatisticsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                                <Label text="%view.settings.showDecimalsInExcel" GridPane.rowIndex="5"/>
-                                <CheckBox fx:id="showDecimalsInExcel" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                        <Label text="%view.settings.autoload" GridPane.rowIndex="4"/>
+                        <CheckBox fx:id="loadDataAtStartupCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </GridPane>
-                    </content>
+                        <Label text="%view.settings.showDecimalsInExcel" GridPane.rowIndex="5"/>
+                        <CheckBox fx:id="showDecimalsInExcel" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+
+                    </GridPane>
                 </TitledPane>
                 <TitledPane expanded="false" text="%view.settings.workdays">
-                    <content>
-                        <GridPane>
-                            <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0" />
-                            </columnConstraints>
-                            <rowConstraints>
-                                <RowConstraints vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                            </rowConstraints>
-                            <children>
-                                <Label text="%view.settings.workdays.collapse" GridPane.rowIndex="1" />
-                                <Label text="%view.settings.workdays.highlight" GridPane.rowIndex="2" />
+                    <GridPane>
+                        <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="40.0"/>
+                        </columnConstraints>
+                        <rowConstraints>
+                            <RowConstraints vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                        </rowConstraints>
+                        <padding>
+                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        </padding>
+                        <Label text="%view.settings.workdays.collapse" GridPane.rowIndex="1"/>
+                        <Label text="%view.settings.workdays.highlight" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.monday" GridPane.columnIndex="1">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="mondayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="mondayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.monday" GridPane.columnIndex="1">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="mondayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="mondayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.tuesday" GridPane.columnIndex="2">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="tuesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="tuesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.tuesday" GridPane.columnIndex="2">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="tuesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="tuesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.wednesday" GridPane.columnIndex="3">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="wednesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="wednesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.wednesday" GridPane.columnIndex="3">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="wednesdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="wednesdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.thursday" GridPane.columnIndex="4">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="thursdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="thursdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.thursday" GridPane.columnIndex="4">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="thursdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="thursdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.friday" GridPane.columnIndex="5">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="fridayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="fridayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.friday" GridPane.columnIndex="5">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="fridayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="fridayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="5" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.saturday" GridPane.columnIndex="6">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="saturdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="saturdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+                        <Label text="%view.settings.workdays.saturday" GridPane.columnIndex="6">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="saturdayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="saturdayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="6" GridPane.rowIndex="2"/>
 
-                                <Label text="%view.settings.workdays.sunday" GridPane.columnIndex="7">
-                                    <font>
-                                        <Font name="System Bold" size="13.0" />
-                                    </font>
-                                </Label>
-                                <CheckBox fx:id="sundayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="sundayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="2" />
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </GridPane>
-                    </content>
+                        <Label text="%view.settings.workdays.sunday" GridPane.columnIndex="7">
+                            <font>
+                                <Font name="System Bold" size="13.0"/>
+                            </font>
+                        </Label>
+                        <CheckBox fx:id="sundayCollapseCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="1"/>
+                        <CheckBox fx:id="sundayHighlightCheckbox" mnemonicParsing="false" GridPane.columnIndex="7" GridPane.rowIndex="2"/>
+                    </GridPane>
                 </TitledPane>
             </panes>
         </Accordion>
@@ -199,14 +192,12 @@
     </center>
 
     <bottom>
-        <HBox alignment="CENTER_RIGHT" spacing="5.0" styleClass="ywlv-toolbar" BorderPane.alignment="CENTER_RIGHT">
-            <children>
-                <Button fx:id="cancelSettingsButton" cancelButton="true" mnemonicParsing="false" text="%view.settings.cancel" />
-                <Button fx:id="saveSettingsButton" defaultButton="true" mnemonicParsing="false" text="%view.settings.save" />
-            </children>
+        <HBox alignment="CENTER_RIGHT" spacing="5.0" styleClass="tool-bar" BorderPane.alignment="CENTER_RIGHT">
             <padding>
-                <Insets bottom="7.0" left="10.0" right="10.0" top="7.0" />
+                <Insets bottom="7.0" left="10.0" right="10.0" top="7.0"/>
             </padding>
+            <Button fx:id="cancelSettingsButton" cancelButton="true" mnemonicParsing="false" text="%view.settings.cancel"/>
+            <Button fx:id="saveSettingsButton" defaultButton="true" mnemonicParsing="false" text="%view.settings.save"/>
         </HBox>
     </bottom>
 </BorderPane>
