--- a/application/src/main/resources/fx/css/light.css
+++ b/application/src/main/resources/fx/css/light.css
@@ -166,3 +166,7 @@
     -fx-bar-fill: #88b501;
     -fx-pie-color: #88b501;
 }
+
+.progress-bar.error > .bar {
+    -fx-background-color: #dd3e3b;
+}
