--- a/application/src/main/resources/fx/css/base-styling.css
+++ b/application/src/main/resources/fx/css/base-styling.css
@@ -65,3 +65,13 @@
     -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-focus-color;
     -fx-background-insets: 0, 1, 2;
 }
+
+.task-progress-bar > .task-name-text, .task-progress-bar > .progress-text {
+    -fx-font-size: 10.0;
+    -fx-stroke-type: OUTSIDE;
+    -fx-stroke-width: 0.0;
+}
+
+.task-progress-bar > .task-name-text {
+    -fx-start-margin: 5;
+}
