--- a/application/src/main/resources/fx/views/main.fxml
+++ b/application/src/main/resources/fx/views/main.fxml
@@ -3,8 +3,6 @@
 <?import de.pbauerochse.worklogviewer.fx.components.tabs.TimeReportResultTabbedPane?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <BorderPane fx:id="mainView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.MainViewController">
 
     <top>
@@ -34,16 +32,7 @@
     </top>
 
     <bottom>
-        <StackPane BorderPane.alignment="CENTER">
-            <children>
-                <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0" />
-                <Text fx:id="progressText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="progress-text">
-                    <font>
-                        <Font size="10.0" />
-                    </font>
-                </Text>
-            </children>
-        </StackPane>
+        <VBox fx:id="taskProgressContainer" BorderPane.alignment="CENTER"/>
     </bottom>
     <center>
         <StackPane alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_LEFT">
