--- a/application/src/main/resources/fx/views/main.fxml
+++ b/application/src/main/resources/fx/views/main.fxml
@@ -18,6 +18,7 @@
                                 <MenuItem fx:id="exitMenuItem" mnemonicParsing="false" text="%view.menu.file.exit" />
                             </items>
                         </Menu>
+                        <Menu fx:id="pluginsMenu" mnemonicParsing="false" text="%view.menu.plugins" />
                         <Menu mnemonicParsing="false" text="%view.menu.help">
                             <items>
                                 <MenuItem fx:id="logMessagesMenuItem" mnemonicParsing="false" text="%view.menu.help.logs" />
@@ -51,6 +52,7 @@
                                         <Tooltip text="%view.main.download" />
                                     </tooltip>
                                 </Button>
+                                <HBox fx:id="pluginsToolbarButtons" />
                             </items>
                         </ToolBar>
                         <TimeReportResultTabbedPane fx:id="resultTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
