--- a/application/src/main/resources/fx/css/base-styling.css
+++ b/application/src/main/resources/fx/css/base-styling.css
@@ -90,3 +90,8 @@
     -fx-padding: 0.6em;
     -fx-background-color: derive(-fx-accent, 5%);
 }
+
+#logMessagesComponent {
+    -fx-font-size: 11;
+    -fx-font-family: "DejaVu Sans Mono", monospace;
+}
