--- a/application/src/main/resources/fx/views/logMessagesView.fxml
+++ b/application/src/main/resources/fx/views/logMessagesView.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="de.pbauerochse.worklogviewer.fx.LogViewController">
    <padding>
       <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
    </padding>
-   <TextArea fx:id="logMessageTextArea" editable="false" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <font>
-         <Font name="DejaVu Sans Mono" size="10.0"/>
-      </font>
-   </TextArea>
+   <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ToolBar>
+         <Button text="%view.logs.savefile" onAction="#showSaveLogFileDialog" />
+      </ToolBar>
+      <ListView fx:id="logMessagesComponent" VBox.vgrow="ALWAYS" />
+   </VBox>
+
 </AnchorPane>
